# self-service

./: .gitignore  CMakeLists.txt  Cart.hpp  DiningHall.hpp  README.md  Student.hpp  Transaction.hpp  main.cpp  makefile  rememberme.txt
include/: Admin.hpp  DiningHall.hpp  Meal.hpp  Panel.hpp  Reservation.hpp  ShoppingCart.hpp  Storage.hpp  Student.hpp  Transaction.hpp  User.hpp  Utilities.hpp
include/auth/: Filling.hpp  SessionManager.hpp
include/config/: AdminConfig.hpp  AppConfig.hpp  ConfigPaths.hpp  UsersConfig.hpp
include/foodservice/: DiningHall.hpp  Filling.hpp  Meal.hpp  RervationJsonSerialized.hpp  Reservation.hpp  ReservationJsonSerialized.hpp
include/infrastructures/: FileSystem.hpp  Storage.hpp
include/interface/: Panel.hpp
include/payment/: ShoppingCart.hpp  Transaction.hpp
include/roles/: Admin.hpp  Student.hpp  User.hpp
include/utils/: StringUtils.hpp  Utilities.hpp
src/: Admin.cpp  DiningHall.cpp  Meal.cpp  Meal.hpp  Panel.cpp  Reservation.cpp  Reservation.hpp  ShoppingCart.cpp  Storage.cpp  Student.cpp  User.cpp  User.hpp
src/auth/: AdminSessionManger.cpp  Filling.cpp  SessionBase.cpp  SessionManger.cpp  StudentSessionManager.cpp
src/config/: AdminConfig.cpp  AppConfig.cpp  ConfigPaths.cpp  UserConfig.cpp
src/foodservice/: DiningHall.cpp  Filling.cpp  Meal.cpp  Reservation.cpp
src/infrastructures/: FileSystem.cpp  Storage.cpp
src/interface/: AdminPanel.cpp  Panel.cpp  Panel_utils.cpp  StudentPanel.cpp
src/payment/: ShoppingCart.cpp
src/roles/: Admin.cpp  Student.cpp  User.cpp
src/utils/: StringUtils.cpp
